# HackathonProject

./: Cargo.toml  README.md  dfx.json  package-lock.json  package.json  tsconfig.json
src/crowdfunding-dapp-backend/: Cargo.toml
src/crowdfunding-dapp-backend/src/: lib.rs  storage.rs
src/crowdfunding-dapp-frontend/: index.html  package.json
src/crowdfunding-dapp-frontend/src/: App.jsx  main.jsx
src/crowdfunding-dapp-frontend/src/pages/: Dashboard.tsx  FundCampaign.tsx  Home.tsx  RegisterCampaign.tsx
src/crowdfunding-dapp-frontend/src/utils/: actor.ts
