[package]
name = "crowdfunding-dapp-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
paste ="1.0.15"
candid = "0.10"
ic-cdk = "0.17"
ic-cdk-timers = "0.11" # Feel free to remove this dependency if you don't need timers
ic-cdk-macros = "0.16"
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "1.16.0", features = ["v4", "js"] }
